--- a/firstOneJs/app/index.html
+++ b/firstOneJs/app/index.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" type="text/css" href="style.css" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=2658053936" type="text/javascript" charset="utf-8"></script>
+<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=4027475663" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="js/jquery-1.7.1.js" charset="utf-8"></script>
 <script type="text/javascript">
     function getParamByName(str, name){
@@ -30,19 +30,29 @@
     var hash = document.location.hash.substring(1);
     var token = getParamByName(hash, "access_token");
     var uid = getParamByName(hash, "uid");
-
+	alert("token:" + token + ", uid:" + uid);
+	
     (function($){
         $(function(){
 
+	        $.ajax({
+                url: "https://api.weibo.com/2/friendships/friends.json?callback=?",
+	            data: {access_token: token, uid: uid},
+	            method: "GET",
+	            dataType: "jsonp",
+//	            crossDomain: "true",
+	            success: function(result){alert(result.data);}
+	        });
+
+/*
               WB2.anyWhere(function(W){
-                  W.parseCMD("/statuses/public_timeline.json", function(sResult, bStatus){
-                      alert(bStatus);
-                      
+                  W.parseCMD("/friends/ids.json?access_token="+token, function(sResult, bStatus){
+                      alert(bStatus);                      
                       alert(sResult);
-                  }, {access_token:token, uid:uid});
+                  }, {user_id:uid});
 
               });
-
+*/
         });
     })(jQuery);
 
