add jsonp callback

--- a/firstOneJs/app/index.html
+++ b/firstOneJs/app/index.html
@@ -46,7 +46,7 @@
 	            method: "GET",
 	            dataType: "jsonp",
 //	            crossDomain: "true",
-//	            jsonp: "jQueryJSONPResultFun",
+                jsonpCallback: "jQueryJSONPResultFun",
 	            success: function(result){alert(result.data);}
 	        });
 
