--- a/firstOneJs/app/index.html
+++ b/firstOneJs/app/index.html
@@ -27,21 +27,42 @@
 /*        
             $.WB2.api("/friendships/friends.json", null);
 */
+
+            var friends/*Array*/;
+
             $.getJSON("https://api.weibo.com/2/friendships/friends.json?callback=?",
                    {access_token: token, uid: uid},
                    function(result){
-                       var friends = result.data.users;
+                       friends = result.data.users;
                        if(friends == null){
+                           //Error
                            return;
                        }
-                       var rndFriendIndexs = getRandomIndex(friends.length, 3);
-                       $.each(rndFriendIndexs, function(i, n){
-                           var friend = friends[n];
-                           $("div.minipic span:eq(" + i +")").replaceWith($('<span class="mimg"><img src="'+friend.profile_image_url+'" alt="头像"/><p>' + friend.screen_name + '</p></span>'));
-                       });
                    });
 
 //            $('<span class="mimg"><img alt="头像"/><p></p></span>').wrap();
+//            $("div.minipic span:eq(" + i +")").replaceWith($('<span class="mimg"><img src="'+friend.profile_image_url+'" alt="头像"/><p>' + friend.screen_name + '</p></span>'));
+
+
+            function shuffle($img, $name){
+/*
+                var rndFriendIndexs = getRandomIndex(friends.length, 3);
+                $.each(rndFriendIndexs, function(i, n){
+                var friend = friends[n];
+                $img.attr("src", friend["profile_image_url"]);
+                $("<p>" + friend["screen_name"] + "</p>").replaceAll($name);});
+*/
+            }
+    
+            $("#grpButton1").click(function(){
+                
+	            //shuffle($("div.minipic span:eq(" + i + ") > img"), $("div.minipic span:eq(" + i + ") > p");
+	        });
+
+            $("#grpButton2").click(function(){});
+
+            $("#grpButton3").click(function(){});
+
 
             $("#okButton").click(function(){
                   $.get("end-embed.html", function(data){$("body").html(data);});
@@ -69,18 +90,18 @@
 	<div class="minipic">
 		<span class="mimg">
 			<img src="images/index_07.jpg" alt="头像" />
-			<input type="checkbox" id="input" />
+			<p></p>
 		</span>
 		<span class="mimg2">
 			<img src="images/index_07.jpg" alt="头像" />
-			<input type="checkbox" id="input" />
+			<p></p>
 		</span>
 		<span class="mimg3">
 			<img src="images/index_07.jpg" alt="头像" />
-			<input type="checkbox" id="input" />
+			<p></p>
 		</span>
-		<span class="btn">
-			<a href=""><img src="images/btn1.png" alt="" /></a>
+		<span class="btn" id="grpButton1">
+			<img src="images/btn1.png" alt="" />
 		</span>
 	</div>
 
@@ -100,7 +121,7 @@
 			<p>小雅心儿</p>
 			<input type="checkbox" id="input" />
 		</span>
-		<span class="btn2">
+		<span class="btn2" id="grpButton2">
 			<a href=""><img src="images/btn1.png" alt="" /></a>
 		</span>
 	</div>
@@ -121,13 +142,13 @@
 			<p>小雅心儿</p>
 			<input type="checkbox" id="input" />
 		</span>
-		<span class="btn3">
-			<a href=""><img src="images/btn1.png" alt="" /></a>
+		<span class="btn3" id="grpButton3">
+			<img src="images/btn1.png" alt="" />
 		</span>
 	</div>
 
-	<div class="button2">
-		<img id="okButton" src="images/index_15.jpg" alt="" /></div>
+	<div class="button2" id="okButton">
+		<img src="images/index_15.jpg" alt="" /></div>
     </div>
 </div>
 </body>
