--- a/firstOneJs/app/end-embed.html
+++ b/firstOneJs/app/end-embed.html
@@ -1,4 +1,4 @@
-
+<script type="text/javascript" src="js/app-brief.js" charset="utf-8"></script>
 <!-- 头部 -->
 <div class="header">
 
@@ -9,14 +9,21 @@
 		<span class="bimg">
 			<img src="images/pic1.jpg" alt="头像" />
 		</span> 
-	  <span class="endtxt"><p style="font-size:14px"><strong>@张传亮</strong><img src="images/endtxt1.png" alt="" width="337" height="75" /></p>
-	  </span><img src="images/pimg1.png" width="160" height="110"></div>
+        <span class="endtxt">
+            <p style="font-size:14px">
+                <strong>@张传亮</strong>
+            <img src="images/endtxt1.png" alt="" width="337" height="75" /></p>
+        </span>
+        <img src="images/pimg1.png" width="160" height="110">
+    </div>
+    
 	<div class="bar2">
 		<span class="bimg2">
 			<img src="images/pic1.jpg" alt="头像" />
 		</span> 
 	  <span class="endtxt2"><p style="font-size:14px"><strong>@张传亮</strong><img src="images/endtxt1.png" alt="" width="337" height="75" /></p>
 	  </span><img src="images/pimg1.png" width="160" height="110"></div>
+      
 	<div class="bar3">
 		<span class="bimg3">
 			<img src="images/pic1.jpg" alt="头像" />
@@ -25,6 +32,6 @@
 	  </span><img src="images/pimg1.png" width="160" height="110"></div>
 
 	<div class="button">
-		<a href=""><img src="images/button.jpg" alt="" /></a></div>
+		<img src="images/button.jpg" alt="" /></div>
 </div>
 
