--- a/firstOneJs/app/end-embed.html
+++ b/firstOneJs/app/end-embed.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="js/app-brief.js" charset="utf-8"></script>
+<script type="text/javascript" src="js/app-pre-publish.js" charset="utf-8"></script>
 <!-- 头部 -->
 <div class="header">
 
@@ -31,7 +31,7 @@
 	  <span class="endtxt2"><p style="font-size:14px"><strong>@张传亮</strong><img src="images/endtxt1.png" alt="" width="337" height="75" /></p>
 	  </span><img src="images/pimg1.png" width="160" height="110"></div>
 
-	<div class="button">
+	<div class="button" id="shareButton">
 		<img src="images/button.jpg" alt="" /></div>
 </div>
 
