complete pre publish

--- a/firstOneJs/app/end-embed.html
+++ b/firstOneJs/app/end-embed.html
@@ -7,29 +7,44 @@
 
 	<div class="bar1">
 		<span class="bimg">
-			<img src="images/pic1.jpg" alt="头像" />
+			<img alt="头像" />
 		</span> 
         <span class="endtxt">
             <p style="font-size:14px">
-                <strong>@张传亮</strong>
-            <img src="images/endtxt1.png" alt="" width="337" height="75" /></p>
+                <strong></strong>
+            <img width="337" height="75" />
+			<img /></p>
         </span>
-        <img src="images/pimg1.png" width="160" height="110">
+        <img src="" />
     </div>
     
 	<div class="bar2">
 		<span class="bimg2">
-			<img src="images/pic1.jpg" alt="头像" />
+			<img alt="头像" />
 		</span> 
-	  <span class="endtxt2"><p style="font-size:14px"><strong>@张传亮</strong><img src="images/endtxt1.png" alt="" width="337" height="75" /></p>
-	  </span><img src="images/pimg1.png" width="160" height="110"></div>
+	  <span class="endtxt2">
+		<p style="font-size:14px">
+		  <strong></strong>
+		  <img alt="" width="337" height="75" />
+		  <img />
+		</p>
+	  </span>
+	  <img  width="160" height="110">
+    </div>
       
 	<div class="bar3">
 		<span class="bimg3">
-			<img src="images/pic1.jpg" alt="头像" />
+			<img alt="头像" />
 		</span>  
-	  <span class="endtxt2"><p style="font-size:14px"><strong>@张传亮</strong><img src="images/endtxt1.png" alt="" width="337" height="75" /></p>
-	  </span><img src="images/pimg1.png" width="160" height="110"></div>
+	  <span class="endtxt2">
+		<p style="font-size:14px">
+		  <strong></strong>
+		  <img width="337" height="75" />
+		  <img />
+		</p>
+	  </span>
+	  <img width="160" height="110">
+	</div>
 
 	<div class="button" id="shareButton">
 		<img src="images/button.jpg" alt="" /></div>
