--- a/firstOneJs/app/index.html
+++ b/firstOneJs/app/index.html
@@ -23,16 +23,16 @@
 
 	<div class="minipic">
 		<span class="mimg">
-			<img src="images/index_07.jpg" alt="头像" />
+			<img src="" alt="头像" />
 			<p></p>
             <input type="checkbox" readonly="true" checked="true" />
 		</span>
 		<span class="mimg2">
-			<img src="images/index_07.jpg" alt="头像" />
+			<img src="" alt="头像" />
 			<p></p>
 		</span>
 		<span class="mimg3">
-			<img src="images/index_07.jpg" alt="头像" />
+			<img src="" alt="头像" />
 			<p></p>
 		</span>
 		<span class="btn" id="grpButton1">
