--- a/firstOneJs/app/publish-embed.html
+++ b/firstOneJs/app/publish-embed.html
@@ -7,14 +7,15 @@
 	  <span class="himg">
 		<img src="images/headpic.jpg" alt="头像" />
 	  </span>
-    
-      <span class="ttxt">
-		<p>我放了100￥贷款，@XX用60￥饲养了草泥马，@XX用38元买了《尔康写真集》，@XX用2￥送给芙蓉姐姐一面镜子……请叫我债主吧！http://</p>
-	  </span>
-	  <span class="ttxt2"><input type="checkbox" id="" /><p>关注@宜农贷官方微博 </p></span>
-	  <span class="ttxt3"><p><a href=""><img src="images/transbtn.png" width="144" height="38" border="0"></a></p></span>
+      <span class="ttxt" id="post_text"></span>
+	  <span class="ttxt2">
+          <input type="checkbox" id="follow" checked="true" />
+          <p>关注@宜农贷官方微博 </p>
+      </span>
+	  <span class="ttxt3">
+          <p id="publishButton">
+              <img src="images/transbtn.png" width="144" height="38" border="0"></p></span>
 	</div>
-
 	<div class="nipic2">
       <span class="niimg">
 		<img src="images/ppic.png" alt="头像" /></span>
@@ -24,6 +25,6 @@
 		<img src="images/ppic.png" alt="头像" /></span>
       <span class="btn"><a href=""></a></span></div>
     
-	<div class="tbutton" id="publishButton">
+	<div class="tbutton">
 	  <img src="images/tbtn.png" alt="" /></div>
 </div>
