add large image

--- a/firstOneJs/app/publish-embed.html
+++ b/firstOneJs/app/publish-embed.html
@@ -17,12 +17,9 @@
               <img src="images/transbtn.png" width="144" height="38" border="0"></p></span>
 	</div>
 	<div class="nipic2">
-      <span class="niimg">
-		<img src="images/ppic.png" alt="头像" /></span>
-      <span class="niimg2">
-		<img src="images/ppic.png" alt="头像" /></span>
-      <span class="niimg3">
-		<img src="images/ppic.png" alt="头像" /></span>
+      <span class="niimg"></span>
+      <span class="niimg2"></span>
+      <span class="niimg3"></span>
       <span class="btn"><a href=""></a></span></div>
     
 	<div class="tbutton">
