--- a/firstOneJs/app/publish-embed.html
+++ b/firstOneJs/app/publish-embed.html
@@ -1,3 +1,4 @@
+<script src=" http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=3168919025" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="js/app-publish.js" charset="utf-8"></script>
 <div class="header4">
     <div class="logo">
