--- a/firstOneJs/app/preview-e.html
+++ b/firstOneJs/app/preview-e.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="js/app-pre-publish.js" charset="utf-8"></script>
+<script type="text/javascript" src="js/app-preview.js" charset="utf-8"></script>
 <!-- 头部 -->
 <div class="header">
 
