--- a/firstOneJs/app/index.html
+++ b/firstOneJs/app/index.html
@@ -9,9 +9,8 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <script type="text/javascript" src="js/jquery-1.7.1.js" charset="utf-8"></script>
-<script type="text/javascript" src="js/jquery.wb2.js" charset="utf-8"></script>
 <script type="text/javascript" src="js/app.js" charset="utf-8"></script>
-<script type="text/javascript" src="js/app-index.js" charset="utf-8"></script>
+<script type="text/javascript" src="js/app-main.js" charset="utf-8"></script>
 </head>
 <body>
 <!-- 头部 -->
