Signed-off-by: liu jin <jerrydidi@gmail.com>

--- a/tecent/sansha/index.html
+++ b/tecent/sansha/index.html
@@ -10,7 +10,7 @@
 		</style>
 	</head>
 	<body>
-		<div id="flashContent">
+		<div id="flashContent" align = "center">
 			<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="1134" height="780" id="index" align="middle">
 				<param name="movie" value="index.swf" />
 				<param name="quality" value="high" />
