--- a/littledragon/index.html
+++ b/littledragon/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="zh-CN" xml:lang="zh-CN">
 	<head>
 		<title>index</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div id="flashContent">
-			<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="1134" height="780" id="index" align="middle">
+			<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="760" height="700" id="index" align="middle">
 				<param name="movie" value="index.swf" />
 				<param name="quality" value="high" />
 				<param name="bgcolor" value="#ffffff" />
@@ -24,7 +24,7 @@
 				<param name="salign" value="" />
 				<param name="allowScriptAccess" value="sameDomain" />
 				<!--[if !IE]>-->
-				<object type="application/x-shockwave-flash" data="index.swf" width="1134" height="780">
+				<object type="application/x-shockwave-flash" data="index.swf" width="760" height="700">
 					<param name="movie" value="index.swf" />
 					<param name="quality" value="high" />
 					<param name="bgcolor" value="#ffffff" />
@@ -38,7 +38,7 @@
 					<param name="allowScriptAccess" value="sameDomain" />
 				<!--<![endif]-->
 					<a href="http://www.adobe.com/go/getflash">
-						<img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" />
+						<img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="获得 Adobe Flash Player" />
 					</a>
 				<!--[if !IE]>-->
 				</object>
