--- a/timethrough/index.html
+++ b/timethrough/index.html
@@ -5,12 +5,12 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<style type="text/css" media="screen">
 		html, body { height:100%; background-color: #ffffff;}
-		body { margin:0; padding:0; overflow:hidden; }
+		body { margin:0; padding:0;}
 		#flashContent { width:100%; height:100%; }
 		</style>
 	</head>
 	<body>
-		<div id="flashContent">
+		<div id="flashContent" align = "center">
 			<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="760" height="700" id="index" align="middle">
 				<param name="movie" value="index.swf" />
 				<param name="quality" value="high" />
